# ptimer

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build-release.sh
package/: metadata.desktop  metadata.json
package/contents/config/: config.qml  main.xml
package/contents/locale/de/LC_MESSAGES/: plasma_applet_org.nerdocs.ptimer.mo
package/contents/ui/: configGeneral.qml  main.qml
package/translate/: de.po
po/: de.po
